# helpinghand

./: .gitignore  CMakeLists.txt  Makefile  Palindrome  Palindrome.c  README.md  StringRevers  StringRevers.c  TEST_SUMMARY.md  addition  addition.c  addition.rs  advanced_solid_example.cpp  array_rotation.c  array_rotation.cpp  bit_flip.c  casting_examples  casting_examples.cpp  constexpr_optimization  constexpr_optimization.cpp  copy_constructor_example  copy_constructor_example.cpp  custom_deleter.cpp  custom_memory_manager  custom_memory_manager.cpp  data_container_example  data_container_example.cpp  database_singleton  database_singleton.cpp  document_factory  document_factory.cpp  file_processor  file_processor.cpp  if_init_example  if_init_example.cpp  logger_singleton  logger_singleton.cpp  memory_example  memory_example.c  non_virtual_access  (+36 more)
C++11/: .gitignore  Makefile  README.md  cpp11_basic_features.cpp  cpp11_features.cpp
C++14/: .gitignore  Makefile  README.md  cpp14_basic_features.cpp  cpp14_features.cpp  cpp14_intermediate_features.cpp
C++17/: .gitignore  Makefile  README.md  cpp17_advanced_features.cpp  cpp17_basic_features.cpp  cpp17_intermediate_features.cpp
bit_manipulation/: binary_print_and_swap  binary_print_and_swap.c  binary_print_and_swap.cpp
data_analysis/: README.md  time_series_analyzer  time_series_analyzer.cpp
design_patterns/: README.md  factory_pattern_interview_guide  factory_pattern_interview_guide.cpp  (+8 more)
linked_lists/: CMakeLists.txt  README.md  linked_list_recursive  recursive_linked_list_interview_guide.md  singly_linked_list  singly_linked_list.c  singly_linked_list.cpp  singly_linked_list_recursive.cpp  singly_linked_list_recursive.hpp  test_linked_list  test_linked_list.cpp
xml_parsing/: CMakeLists.txt  firmware_data.xml  xml_firmware_parser.cpp  xml_firmware_parser_std.cpp
(+66 files in other folders)
